# roughrider.storage

./: MANIFEST.in  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-package.yml
src/reiter/upload/: bushy.py  flat.py  fs.py  meta.py
src/roughrider/storage/: fs.py  meta.py  pyfs.py
tests/: test_bushy.py  test_center.py  test_dispatch.py  test_flat.py  test_registry.py
